<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login_register"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
   >

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">



        <include
            layout="@layout/app_toolbar"
            android:id="@+id/apptoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <android.support.design.widget.TextInputLayout

            android:id="@+id/login_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login_email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout

            android:id="@+id/login_text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"

            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_height="wrap_content">
        <Button

            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="buttonHome"

            android:text="@string/hint_login_button_login" />
    </LinearLayout>
        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="0dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:text="@string/hint_login_button_register"
                android:textColor="@android:color/holo_green_dark"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                />

        </RelativeLayout>
</LinearLayout>

    </ScrollView>
