<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".fruits">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    >



        <TextView
            android:id="@+id/text_fruits_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/hint_fruits"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_fruits"
            android:layout_width="match_parent"
            android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:padding="16dp"
            android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/text_fruits_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_fruits_type"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/hint_fruits_size"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_fruit_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/size_edit_box"
           android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="55dp"

            android:hint="enter kgs"
            android:background="@drawable/edit_text_fruit_size_background"
            android:inputType="number"
            android:ems="10"
            android:maxLines="1"
            android:lines="1"
            android:padding="16dp"
            />



        <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_fruit_size"
        android:padding="16dp"
            android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:text="@string/hint_price"
        android:textSize="15sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="130dp"
            android:textColor="@android:color/black"

            android:hint="enter price"
            android:background="@drawable/edit_text_price_background"
            android:inputType="number"
            android:ems="10"
            android:maxLines="1"
            android:lines="1"
            android:padding="16dp"

            />

    <Button
        android:id="@+id/button_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@+id/edit_text_price"
        android:textColor="@android:color/white"
        android:background="@drawable/upload_photo_button_background"
       android:layout_centerInParent="true"
        android:text="@string/hint_photo"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textStyle="bold" />


        <ImageView
            android:id="@+id/image_view"
            android:layout_below="@+id/button_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/button_submit"
        android:layout_below="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hint_button_submit"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_green_dark"/>



</RelativeLayout>

</ScrollView>